--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,16 @@
 /*////////////// Fonts //////////////*/
 
 /* link the web font used for the level 1 heading here */
-
+@font-face {
+	font-family: "Baskerville";
+	src: url("../fonts/Baskerville.ttc");
+}
 /*////////// Global Styles //////////*/
 
 body {
 	background: #F3EBE9;
 	font-size: 100%;
-	font-family: 'Times New Roman', serif; 
+	font-family: 'Times New Roman', serif;
 }
 
 .wrapper {
@@ -18,3 +21,46 @@ body {
 }
 
 /* Write all remaining styles here */
+h1, h2 {
+	font-family: 'Baskerville';
+	color: rgb(156,	170,	165);
+}
+
+h2 {
+	font-size: 2em;
+}
+
+header {
+	border-bottom: 1px solid rgb(156,	170,	165);
+	margin-bottom: 5px;
+}
+
+.bordered-image {
+	border: 5px solid rgb(156,	170,	165)
+}
+#press-images img {
+	border: 5px solid rgb(204	204	204);
+	}
+.copyright {
+	text-align: right;
+	font-size: 0.75em;
+}
+
+#title a {
+	font-size: 3em;
+	text-decoration: none;
+	color: rgb(156,	170, 165);
+}
+
+#title {
+	margin-top: 0;
+	margin-bottom: 10px;
+}
+
+#title a:hover {
+	color: rgb(120, 170, 165)
+}
+
+#press-images img:hover {
+	border: 5px solid rgb(156,	170,	165);
+}
